public class Booking {
    public void book() {
        System.out.println("Booking a room");
    }

}