public interface State {
    void handle(Decider decider);
}